GitVersion1/objects/FMC_Territory_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for FMC and Project Group Mapping</description>
    <fields>
        <fullName>FMC_User_ID__c</fullName>
        <description>To hold the SFDc user Id for FMC user record</description>
        <label>FMC User ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FMC_User_Name__c</fullName>
        <description>To hold FMc Name of CFN US Retail territory</description>
        <label>FMC User Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Territory_Name__c</fullName>
        <description>Name of the Parent Territory</description>
        <label>Parent Territory Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory_ID__c</fullName>
        <description>To hold Territory ID for CFN US Retail territories</description>
        <label>Territory ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>FMC Territory Mapping</label>
</CustomObject>